--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
 </head>
 <body>
     
+
+    <h1>Hello Bootstrap</h1>
+
+    <script src="bootstrap/bootstrap.bundle.min.js"></script>
 </body>
 </html>
