--- a/index.html
+++ b/index.html
@@ -6,12 +6,77 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
     
 
-    <h1>Hello Bootstrap</h1>
+    <h1 class="nome">M.M.V</h1>
 
-    <script src="bootstrap/bootstrap.bundle.min.js"></script>
+<div class="container">
+    <div class="row" >
+        <div class="col">
+            <!--aqui vem a minha tabela-->
+            <table class="table table-striped table-hover">
+                <thead>
+                    <tr>
+                        <th>Produto</th>
+                        <th>Preço</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Mouse</td>
+                        <td>R$ 39,90</td>
+                    </tr>
+                    <tr>
+                        <td>Teclado</td>
+                        <td>R$ 29,00</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <!--o formulário vem aqui-->
+
+    <div class="row">
+        <div class="col">
+            <form>
+                <label class="form-label">Nome:</label>
+                <input type="text" class="form-control">
+                <label class="form-label">E-mail:</label>
+                <input type="email" class="form-control">
+            <br>
+                <button class="btn btn-primary">Salvar</button>
+            </form>
+        </div>
+    </div>
+
+    <div class="col-6">
+        <img src="images/SãoPaulo.jpg" alt="SãoPaulo" class="img-fluid rounded">
+    </div>
+<br>
+    <div class="row">
+        <div class="col">
+            <img src="images/SãoPaulo.jpg" alt="SãoPaulo" class="img-fluid rounded">
+        </div>
+    </div>
+
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+    <script src="bootstrap/bootstrap.bundle.min.js"></script> 
+    <script src="js/funcoes.js"></script>
 </body>
 </html>
